# bmk4

./: CMakeLists.txt  DEPENDENCY_MAP.md  FRONTIER_REPORT.md  HANDOFF.md  PORT_JOURNAL.md  README.md
.github/workflows/: build-kisarcod-win.yaml  ios-compile-probe.yml  ios-stub.yml
docs/: ASSET_INVENTORY.md  CROSS_REVIEW.md  FASTFILE_PLAN.md  M14_PMOVE_SANDBOX_REPORT.md  NEXT_SESSION.md  ROADMAP_TO_PLAYABLE.md  fastfile-struct-catalog.md
docs/knowledge/: DXVK_D1_NULL_DESCRIPTOR.md  FF_RUNTIME_NOTES.md  RENDERER_INIT_NOTES.md
docs/reviews/: 965d45f-claude.md  k2-lane-a-notes.md  oracle1-lane-c-notes.md  phase3-plan-claude-response.md  phase3-plan-sol.md  renderer-device-lane-b-notes.md
ios/: README.md  project.yml
ios/Stub/: BootFSSmoke.cpp  BootScaffold.cpp  BridgingHeader.h  D3D9Smoke.mm  EngineSmoke.cpp  MetalViewController.swift  RendererPlaceholder.cpp  RendererProofScaffold.cpp
scripts/ios/: CMakeLists.txt
scripts/platform/ios/: build-dxvk-ios.sh  build-engine-lib.sh  dxvk-v2.7.1-ios-null-descriptor.patch  dxvk-v2.7.1-ios.patch  platform.cmake
src/gfx_d3d/: rb_backend.cpp
src/stringed/: stringed_hooks.cpp  stringed_ingame.h
src/universal/: com_files.cpp  com_files.h  dvar.cpp
tools/ff_oracle/: CMakeLists.txt  README.md  ff_oracle.cpp  generate_minimal_fixture.py
tools/oracle1/: DESIGN.md  FIXTURE02_VERDICT.md  check_trace.py  oracle1_scaffold.cpp  oracle1_trace.cpp
